--- a/assets/scss/color.scss
+++ b/assets/scss/color.scss
@@ -27,3 +27,7 @@
 
 @include defineColor('black', $black);
 @include defineColor('white', $white);
+@include defineColor('grey', $grey);
+@include defineColor('roxo', $roxo);
+@include defineColor('roxoo', $roxoo);
+@include defineColor('pink', $pink);
