--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -1,4 +1,105 @@
-@media screen and (min-width: $xs) {}
+@media screen and (min-width: $xs) {
+    body {
+        font-weight: 400;
+        font-family: 'Montserrat', sans-serif;
+    }
+    .bold {
+        font-weight: 500;
+    }
+    b {
+        font-weight: 500;
+    }
+    h1 {
+        font-size: 24px;
+    }
+    h2 {
+        font-size: 18px;
+    }
+    p {
+        font-size: 16px;
+        line-height: 26px;
+    }
+    a {
+        color: white;
+        text-decoration: underline;
+        &:hover {
+            color: $pink;
+        }
+    }
+    nav {
+        position: fixed!important;
+        width: 100%;
+        z-index: 9999;
+        a.navbar-brand {
+            color: white!important;
+            font-weight: 700;
+            text-decoration: none;
+            font-size: 32px;
+        }
+        .navbar-nav,
+        ul {
+            .nav-item,
+            li {
+                .nav-link,
+                a {
+                    color: white;
+                    text-decoration: none;
+                    &:hover {
+                        color: $pink!important;
+                    }
+                }
+            }
+        }
+    }
+    canvas {
+        position: absolute;
+        top: 0;
+        display: block;
+    }
+    section {
+        background-color: $black;
+        .row {
+            padding: 40px 0;
+            min-height: 100vh;
+        }
+        .zoom {
+            overflow: hidden;
+            height: 128px;
+            width: 128px;
+            img {
+                max-width: 100%;
+                transition: all 1s;
+                margin-top: 0px;
+                transform: scale(1);
+                &:hover {
+                    margin-top: 50px;
+                    transform: scale(4);
+                }
+            }
+        }
+    }
+    .box-repositorio {
+        background: white;
+        width: 100%;
+        min-height: 150px;
+        border-radius: 5px;
+        margin-bottom: 30px;
+        padding: 15px;
+        a {
+            font-weight: bold;
+            color: #0366d6;
+            text-decoration: none;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+        legend {
+            margin-top: 15px;
+            font-size: 12px!important;
+            color: #586069!important;
+        }
+    }
+}
 
 @media screen and (min-width: $sm) {}
 
