--- a/assets/scss/var.scss
+++ b/assets/scss/var.scss
@@ -3,5 +3,10 @@ $lg: 992px;
 $md: 768px;
 $sm: 576px;
 $xs: 0px;
-$black: #0000;
+$black: #292C33;
+$grey: #95A2BB;
 $white: #fff;
+$pink: #A18CB4;
+$roxo: #5840ba;
+$roxoo: #724fff;
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap');
